Closed
Bug 332493
Opened 19 years ago
Closed 19 years ago
Folders disappear when dragged
Categories
(Firefox :: Bookmarks & History, defect, P2)
Tracking
()
RESOLVED
FIXED
Firefox 2 alpha2
People
(Reporter: ria.klaassen, Assigned: brettw)
Details
(Keywords: fixed1.8.1, Whiteboard: swag: 2d)
Attachments
(2 files)
3.61 KB,
application/octet-stream
|
Details | |
3.24 KB,
patch
|
bugs
:
review+
|
Details | Diff | Splinter Review |
Steps to reproduce:
- Start Firefox with the default set of bookmarks
- Open Places
- Drag "Firefox and Mozilla Links" into Bookmarks Toolbar or Bookmarks Menu
- Drag it back if you still can find it (it maybe immediately lost if you drag it into the menu)
Result: also after a restart "Firefox and Mozilla Links" is gone.
Also other folders on the left side show a faulty behaviour.
It appears to me that Firefox does not quite know where exactly the location of the folder is.
This bug may be related to Bug 332220 but I don't know if it is quite a dupe.
Reporter | ||
Comment 1•19 years ago
|
||
I've made a testcase.
- Import the set of bookmarks I'll attach
- Open Places and drag all the folders from menu to bookmarks toolbar
- Then start dragging them back. Some of them may not appear in the folder and you may experience hangs of Places. The hangs sometimes end when you close Places but sometimes the whole application doesn't react anymore.
- Then move them all again to bookmarks toolbar. You'll see more and more of the folders disappear and some lost folders reappear magically.
You may end up with 5 folders instead of 9.
Reporter | ||
Comment 2•19 years ago
|
||
Reporter | ||
Updated•19 years ago
|
Summary: "Firefox and Mozilla Links" disappearing trick → "Firefox and Mozilla Links" disappearing trick (and other folders)
Updated•19 years ago
|
Assignee: nobody → bugs
Priority: -- → P2
Target Milestone: --- → Firefox 2 alpha2
Comment 3•19 years ago
|
||
What piece of UI am I using here? Can you provide excrutiating detail?
Updated•19 years ago
|
Whiteboard: swag: 2d
Assignee | ||
Comment 4•19 years ago
|
||
This patch throws an exception if a negative index is passed in for the location of an item. -1 is still accepted to mean "append". Now, these operations that caused the folder to disappear will assert, which should make finding the frontend bug easier.
Attachment #217325 -
Flags: review?(bugs)
Comment 5•19 years ago
|
||
Comment on attachment 217325 [details] [diff] [review]
Disallow bad negative indices from the bookmarks service
r=ben@mozilla.org
Attachment #217325 -
Flags: review?(bugs) → review+
Assignee | ||
Updated•19 years ago
|
Summary: "Firefox and Mozilla Links" disappearing trick (and other folders) → Folders disappear when dragged
Assignee | ||
Updated•19 years ago
|
Assignee: bugs → brettw
Assignee | ||
Comment 6•19 years ago
|
||
The bookmarks service patch is on branch and trunk. I'm closing this bug because the folders don't disappear anymore. I filed bug 332873 for fixing the invalid indices problem when dragging over folders.
Comment 7•15 years ago
|
||
Bug 451915 - move Firefox/Places bugs to Firefox/Bookmarks and History. Remove all bugspam from this move by filtering for the string "places-to-b-and-h".
In Thunderbird 3.0b, you do that as follows:
Tools | Message Filters
Make sure the correct account is selected. Click "New"
Conditions: Body contains places-to-b-and-h
Change the action to "Delete Message".
Select "Manually Run" from the dropdown at the top.
Click OK.
Select the filter in the list, make sure "Inbox" is selected at the bottom, and click "Run Now". This should delete all the bugspam. You can then delete the filter.
Gerv
Component: Places → Bookmarks & History
QA Contact: places → bookmarks
You need to log in
before you can comment on or make changes to this bug.
Description
•