Bug 332493 r=ben@mozilla.org Disallow negative indices for bookmark items.